little fixes on images/gaps on mobile

--- a/ropa-mobile.css
+++ b/ropa-mobile.css
@@ -402,7 +402,7 @@ img.special-border {
     justify-content: start;
     align-items: center;
     text-align: center;
-    gap: 1.2rem;
+    gap: 0.8rem;
     /* border: 1px solid red; */
 }
 
@@ -412,7 +412,7 @@ img.special-border {
 }
 .grid-images .img-wrapper {
     background-color: var(--surface-grid-images-default);
-    padding: 0rem 2rem 2rem;
+    padding: 0;
     border-radius: 1rem;
     width: 100%;
     /* border: 1px solid red; */
